# AssertFlip

./: .gitignore  README.md  assertflip_env.yml  run.md
assertflip/: pyproject.toml
assertflip/src/assertFlip/: assertFlip.py  segment.py
assertflip_swt_lite_unique_run/: assertflip_swt_lite_unique_summary.txt
assertflip_swt_verified_author326_first100_run/: assertflip_swt_verified_author326_first100_summary.txt
assertflip_swt_verified_first80_run/: assertflip_swt_verified_first80_summary.txt
evaluation_results_on_SWT_Bench/: assertFlip.ablation_0_regeneration_attempts.json  assertFlip.ablation_5_regeneration_attempts.json  assertFlip.ablation_direct_fail_variant.json  assertFlip.ablation_no_llm_validation.json  assertFlip.ablation_no_planner.json  assertFlip.ablation_perfect_localization.json  assertFlip_Lite_unique_188_instances.json  assertFlip_default_run.json
my/: run_btcr_assertflip.sh  run_btcr_assertflip_container.sh  run_btcr_generate_eval_summary.sh
preds_files/: 0-regeneration-attempts-preds.jsonl  5-regeneration-attempts-preds.jsonl  ablation-no-planning-preds.jsonl  ablation-no-validation-preds.jsonl  ablation-perfect-localization-preds.jsonl  assertflip-default-preds.jsonl  direct-fail-variant-preds.jsonl  lite-188-preds.jsonl
scripts/: classify_taxonomy_failures.py  config.py  constants.py  generate_preds_phases.py  make_resume_dataset.py  plot_venn.R  run_assertflip_full.sh  run_parallel.py  run_parallel_without_planner_ablation.py  run_parallel_without_validation_ablation.py  run_swtbench_eval_for_results.sh  run_swtlite_full.sh  (+7 more)
(+378 files in other folders)
